# esp-skainet

components/hardware_driver/: CMakeLists.txt
components/hardware_driver/boards/include/: bsp_board.h  esp32_p4_function_ev_2mic_board.h
examples/cn_speech_commands_recognition/components/esp32_p4_box/: CMakeLists.txt  esp32_p4_box.c  idf_component.yml
examples/cn_speech_commands_recognition/components/esp32_p4_box/include/bsp/: esp32_p4_box.h
examples/cn_speech_commands_recognition/main/: CMakeLists.txt  idf_component.yml  main.c
examples/cn_speech_commands_recognition/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
examples/cn_speech_commands_recognition/main/ui/components/: ui_comp_hook.c
examples/cn_speech_commands_recognition/main/ui/fonts/: ui_font_FontPromt.c  ui_font_FontSR.c  ui_font_FontSR36.c
examples/cn_speech_commands_recognition/main/ui/images/: ui_img_1184979050.c  ui_img_1706561437.c  ui_img_374834912.c  ui_img_424947501.c  ui_img_coffee_pic_2_png.c
examples/cn_speech_commands_recognition/main/ui/screens/: ui_ScreenSR.c
